bin_PROGRAMS =

EXTRA_DIST = \
	source/base/TePDIExamplesBase.hpp \
	resources/b3spline.flr \
	resources/cbers2b_blue_crop.tif \
	resources/cbers2b_green_crop.tif \
	resources/cbers2b_hrc_crop.tif \
	resources/cbers2b_red_crop.tif \
	resources/cbers2b_rgb342_crop.tif \
	resources/cbers2b.srf \
	resources/cbers_b2_crop_A.tif \
	resources/cbers_b2_crop_B_contraste.tif \
	resources/cbers_b2_crop_contraste_halfsampled.tif \
	resources/cbers_b2_crop_contraste.tif \
	resources/cbers_b2_crop_C.tif \
	resources/cbers_b2_crop.tif \
	resources/cbers_rgb342_crop1_chip0_0.tif \
	resources/cbers_rgb342_crop1_chip0_250.tif \
	resources/cbers_rgb342_crop1_chip0_500.tif \
	resources/cbers_rgb342_crop1_chip0_750.tif \
	resources/cbers_rgb342_crop1_chip250_0.tif \
	resources/cbers_rgb342_crop1_chip250_250.tif \
	resources/cbers_rgb342_crop1_chip250_500.tif \
	resources/cbers_rgb342_crop1_chip250_750.tif \
	resources/cbers_rgb342_crop1_chip500_0.tif \
	resources/cbers_rgb342_crop1_chip500_250.tif \
	resources/cbers_rgb342_crop1_chip500_500.tif \
	resources/cbers_rgb342_crop1_chip500_750.tif \
	resources/cbers_rgb342_crop1_cropA.tif \
	resources/cbers_rgb342_crop1_cropB.tif \
	resources/cbers_rgb342_crop1_halfsampled_cropA.tif \
	resources/cbers_rgb342_crop1_halfsampled_cropB.tif \
	resources/cbers_rgb342_crop1_halfsampled.tif \
	resources/cbers_rgb342_crop1.tif \
	resources/cbers_rgb342_crop2.tif \
	resources/cbers_rgb342_crop3.tif \
	resources/ikonos.srf \
	resources/pattern1.tif \
	resources/quickbird.srf \
	resources/spot5.srf \
	resources/triangle.flr \
	resources/mask.tif \
	resources/data.tif \
	resources/groundTruth.tif

#########################################################################
# TePDIArithmetic test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIArithmetic
endif

______bin_terralib_pdiexamples_TePDIArithmetic_SOURCES = \
	source/TePDIArithmetic/TePDIArithmetic_test.cpp

#########################################################################
# TePDIBDFilter test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIBDFilter
endif

______bin_terralib_pdiexamples_TePDIBDFilter_SOURCES = \
	source/TePDIBDFilter/TePDIBDFilter_test.cpp
	
#########################################################################
# TePDIBlender test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIBlender
endif

______bin_terralib_pdiexamples_TePDIBlender_SOURCES = \
	source/TePDIBlender/TePDIBlender_test.cpp	
	
#########################################################################
# TePDIClassification test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIClassification
endif

______bin_terralib_pdiexamples_TePDIClassification_SOURCES = \
	source/TePDIClassification/TePDIClassification_test.cpp		
	
#########################################################################
# TePDIColorTransform test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIColorTransform
endif

______bin_terralib_pdiexamples_TePDIColorTransform_SOURCES = \
	source/TePDIColorTransform/TePDIColorTransform_test.cpp	

#########################################################################
# TePDIContrast test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIContrast
endif

______bin_terralib_pdiexamples_TePDIContrast_SOURCES = \
	source/TePDIContrast/TePDIContrast_test.cpp
	
#########################################################################
# TePDICorrelationMatching test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDICorrelationMatching
endif

______bin_terralib_pdiexamples_TePDICorrelationMatching_SOURCES = \
	source/TePDICorrelationMatching/TePDICorrelationMatching_test.cpp
	
#########################################################################
# TePDIDecorrelationEnhancement test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIDecorrelationEnhancement
endif

______bin_terralib_pdiexamples_TePDIDecorrelationEnhancement_SOURCES = \
	source/TePDIDecorrelationEnhancement/TePDIDecorrelationEnhancement_test.cpp		

#########################################################################
# TePDIFilterMask test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIFilterMask
endif

______bin_terralib_pdiexamples_TePDIFilterMask_SOURCES = \
	source/TePDIFilterMask/TePDIFilterMask_test.cpp		

#########################################################################
# TePDIFusion test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIFusion
endif

______bin_terralib_pdiexamples_TePDIFusion_SOURCES = \
	source/TePDIFusion/TePDIFusion_test.cpp		
	
#########################################################################
# TePDIHaralick test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIHaralick
endif

______bin_terralib_pdiexamples_TePDIHaralick_SOURCES = \
	source/TePDIHaralick/TePDIHaralick_test.cpp		
	
#########################################################################
# TePDIHistogram test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIHistogram
endif

______bin_terralib_pdiexamples_TePDIHistogram_SOURCES = \
	source/TePDIHistogram/TePDIHistogram_test.cpp		
	
#########################################################################
# TePDIInterpolator test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIInterpolator
endif

______bin_terralib_pdiexamples_TePDIInterpolator_SOURCES = \
	source/TePDIInterpolator/TePDIInterpolator_test.cpp		
	
#########################################################################
# TePDIJointHistogram test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIJointHistogram
endif

______bin_terralib_pdiexamples_TePDIJointHistogram_SOURCES = \
	source/TePDIJointHistogram/TePDIJointHistogram_test.cpp		
	
#########################################################################
# TePDILinearFilter test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDILinearFilter
endif

______bin_terralib_pdiexamples_TePDILinearFilter_SOURCES = \
	source/TePDILinearFilter/TePDILinearFilter_test.cpp		
	
#########################################################################
# TePDIMathFunctions test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIMathFunctions
endif

______bin_terralib_pdiexamples_TePDIMathFunctions_SOURCES = \
	source/TePDIMathFunctions/TePDIMathFunctions_test.cpp		
	
#########################################################################
# TePDIMatrix test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIMatrix
endif

______bin_terralib_pdiexamples_TePDIMatrix_SOURCES = \
	source/TePDIMatrix/TePDIMatrix_test.cpp		
	
#########################################################################
# TePDIMatrixFunctions test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIMatrixFunctions
endif

______bin_terralib_pdiexamples_TePDIMatrixFunctions_SOURCES = \
	source/TePDIMatrixFunctions/TePDIMatrixFunctions_test.cpp		
	
#########################################################################
# TePDIMIMatching test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIMIMatching
endif

______bin_terralib_pdiexamples_TePDIMIMatching_SOURCES = \
	source/TePDIMIMatching/TePDIMIMatching_test.cpp		
	
#########################################################################
# TePDIMixModel test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIMixModel
endif

______bin_terralib_pdiexamples_TePDIMixModel_SOURCES = \
	source/TePDIMixModel/TePDIMixModel_test.cpp		
	
#########################################################################
# TePDIMMIOMatching test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIMMIOMatching
endif

______bin_terralib_pdiexamples_TePDIMMIOMatching_SOURCES = \
	source/TePDIMMIOMatching/TePDIMMIOMatching_test.cpp		
	
#########################################################################
# TePDIMorfFilter test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIMorfFilter
endif

______bin_terralib_pdiexamples_TePDIMorfFilter_SOURCES = \
	source/TePDIMorfFilter/TePDIMorfFilter_test.cpp		
	
#########################################################################
# TePDIMosaic test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIMosaic
endif

______bin_terralib_pdiexamples_TePDIMosaic_SOURCES = \
	source/TePDIMosaic/TePDIMosaic_test.cpp		
	
#########################################################################
# TePDIOFMatching test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIOFMatching
endif

______bin_terralib_pdiexamples_TePDIOFMatching_SOURCES = \
	source/TePDIOFMatching/TePDIOFMatching_test.cpp		
	
#########################################################################
# TePDIParallelSegmenter test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIParallelSegmenter
endif

______bin_terralib_pdiexamples_TePDIParallelSegmenter_SOURCES = \
	source/TePDIParallelSegmenter/TePDIParallelSegmenter_test.cpp		
	
#########################################################################
# TePDIParameters test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIParameters
endif

______bin_terralib_pdiexamples_TePDIParameters_SOURCES = \
	source/TePDIParameters/TePDIParameters_test.cpp		
	
#########################################################################
# TePDIPIManager test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIPIManager
endif

______bin_terralib_pdiexamples_TePDIPIManager_SOURCES = \
	source/TePDIPIManager/TePDIPIManager_test.cpp		
	
#########################################################################
# TePDIPrincipalComponents test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIPrincipalComponents
endif

______bin_terralib_pdiexamples_TePDIPrincipalComponents_SOURCES = \
	source/TePDIPrincipalComponents/TePDIPrincipalComponents_test.cpp		
	
#########################################################################
# TePDIRadarFilters test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIRadarFilters
endif

______bin_terralib_pdiexamples_TePDIRadarFilters_SOURCES = \
	source/TePDIRadarFilters/TePDIRadarFilters_test.cpp		
	
#########################################################################
# TePDIRaster2Vector test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIRaster2Vector
endif

______bin_terralib_pdiexamples_TePDIRaster2Vector_SOURCES = \
	source/TePDIRaster2Vector/TePDIRaster2Vector_test.cpp		
	
#########################################################################
# TePDIRegister test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIRegister
endif

______bin_terralib_pdiexamples_TePDIRegister_SOURCES = \
	source/TePDIRegister/TePDIRegister_test.cpp		
	
#########################################################################
# TePDIRgbPalette test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIRgbPalette
endif

______bin_terralib_pdiexamples_TePDIRgbPalette_SOURCES = \
	source/TePDIRgbPalette/TePDIRgbPalette_test.cpp		
	
#########################################################################
# TePDISegmentation test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDISegmentation
endif

______bin_terralib_pdiexamples_TePDISegmentation_SOURCES = \
	source/TePDISegmentation/TePDISegmentation_test.cpp		
	
#########################################################################
# TePDISensorSimulator test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDISensorSimulator
endif

______bin_terralib_pdiexamples_TePDISensorSimulator_SOURCES = \
	source/TePDISensorSimulator/TePDISensorSimulator_test.cpp		
	
#########################################################################
# TePDIStatistic test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIStatistic
endif

______bin_terralib_pdiexamples_TePDIStatistic_SOURCES = \
	source/TePDIStatistic/TePDIStatistic_test.cpp		
	
#########################################################################
# TePDIUtils test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
if TE_BUILD_JPEGBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIUtils
endif
endif

______bin_terralib_pdiexamples_TePDIUtils_SOURCES = \
	source/TePDIUtils/TePDIUtils_test.cpp		
	
#########################################################################
# TePDIWavelets test

if TE_BUILD_TIFFBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIWavelets
endif

______bin_terralib_pdiexamples_TePDIWavelets_SOURCES = \
	source/TePDIWavelets/TePDIWavelets_test.cpp	
	
#########################################################################
# TePDISimplex test

if TE_BUILD_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDISimplex
endif

______bin_terralib_pdiexamples_TePDISimplex_SOURCES = \
	source/TePDISimplex/TePDISimplex_test.cpp		
	
#########################################################################
# TePDIFFT test

if TE_BUILD_FFTWBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIFFT
endif

______bin_terralib_pdiexamples_TePDIFFT_SOURCES = \
	source/TePDIFFT/TePDIFFT_test.cpp

#########################################################################
# TePDIHants test

if TE_BUILD_FFTWBASED_PDIEXAMPLE
bin_PROGRAMS += ../../bin/terralib_pdiexamples_TePDIHants
endif

______bin_terralib_pdiexamples_TePDIHants_SOURCES = \
	source/TePDIHants/TePDIHants_test.cpp	
	
#########################################################################
# Adding all build binaries to test queue

TESTS = $(bin_PROGRAMS)

